--- a/app/src/main/res/layout/activity_divergent.xml
+++ b/app/src/main/res/layout/activity_divergent.xml
@@ -4,7 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Divergent">
+
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Divergent"
+            android:textSize="40dp"
+            android:textStyle="italic" />
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -13,12 +31,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <VideoView
             android:id="@+id/video_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="244dp" />
 
     </FrameLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="215dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="In a world divided by factions based on virtues, Tris learns she's Divergent and won't fit in. When she discovers a plot to destroy Divergents,Tris and the mysterious Four must find out what makes Divergents dangerous before it's too late."
+        android:textSize="20dp" />
 </LinearLayout>
