--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,30 +18,14 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="200dp"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/poppins_semibold"
                     android:gravity="center"
                     android:text="Welcome to Netfilm"
+                    android:textColor="@color/black"
                     android:textSize="26dp"
-                    android:textStyle="italic" />
-
-
-                <RelativeLayout
-                    android:id="@+id/idk5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="100dp">
-
-                    <EditText
-                        android:layout_width="260dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="55dp"
-                        android:hint="Search"
-                        android:inputType="text"
-                        android:textSize="18dp" />
-
-                </RelativeLayout>
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -56,9 +40,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
-                    android:text="Popular"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Popular "
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:textStyle="italic" />
 
             </RelativeLayout>
 
@@ -142,8 +128,10 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
                     android:text="Movies"
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/poppins_regular"
+                    android:textStyle="italic" />
 
             </RelativeLayout>
 
@@ -246,8 +234,10 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
                     android:text="Bingeworhty suspenseful Tv shows"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:textStyle="italic" />
 
             </RelativeLayout>
 
@@ -399,8 +389,10 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
                     android:text="Tv action &amp; adventure"
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/poppins_regular"
+                    android:textStyle="italic" />
 
             </RelativeLayout>
 
@@ -533,9 +525,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
+                    android:fontFamily="@font/poppins_regular"
                     android:text="Romantic comedies movies "
+                    android:textColor="@android:color/darker_gray"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:textStyle="italic" />
             </RelativeLayout>
 
             <HorizontalScrollView
